# HIPPO4IHTP

./: .gitignore  LICENSE  README.md  pyproject.toml
computationalResults/: 10minuteTL.xlsx  ablation.xlsx  asymmetricTime.xlsx  asymmetric_time.xlsx  fullBenchmark.xlsx  full_benchmark.xlsx  longerHorizon.xlsx  proxies.xlsx  proxy_grid.xlsx  warmStart.xlsx
data/hidden/: bestKnownValues.txt
data/public/: bestKnownValues.txt
data/public/referenceSolutions/: sol_i01.json
hippo/: __init__.py  __main__.py  config.py  instance.py  solver.py
hippo/heuristics/: __init__.py  phase1.py  phase2.py
hippo/models/: __init__.py  base.py  phase1.py  phase2.py
hippo/solution/: __init__.py  exporter.py
